
  * lib:
    - Fixed not invoking std::terminate() when a pipe process fail.
    - config:
      - New option 'cupt::directory::configuration::pre'.
      - 'setScalar': accept options from foreign families. They may be useful
        for e.g. hooks.
    - system/resolvers/native:
      - Reduced solution memory footprint.
      - Reduced average CPU costs of postprocessing failed solutions.
    - system/worker:
      - 'changeSystem': for removal actions, change automatically installed
        flag after the action, not before.
      - 'changeSystem': support VERSION 3 of preinstall hooks. Thanks to
         James McCoy for the format analysis.
      - 'changeSystem': support for sending hook input to any file descriptor
        hooks want. Thanks to James McCoy for the report. Together with an
        entry above this (Closes: 725979)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 16 Nov 2013 14:35:04 +0200

cupt (2.6.4) unstable; urgency=medium

  * lib:
    - system/worker:
      - 'renameSnapshot': don't accept invalid snapshot names.
      - Detect snapshot names having whitespace characters as invalid.
      - 'updateReleaseAndIndexData': reimplemented needed subset of <future>.
        Fixes FTBFS on armel. (Closes: #730974)
  * debian:
    - control:
      - Bumped Standards-Version to 3.9.5, no changes needed.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Tue, 24 Dec 2013 20:59:30 +0200

cupt (2.6.3) unstable; urgency=low

  * lib:
    - Standard-conformance fixes to be buildable by g++-4.8.
  * build system:
    - Removed the restriction to build only with g++-4.6.
  * debian:
    - control:
      - Removed 'g++-4.6' from Build-Depends.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Tue, 22 Oct 2013 23:05:55 +0300

cupt (2.6.2) unstable; urgency=low

  * lib:
    - system/worker:
      - 'changeSystem': fixed forgetting some multiplied dependencies if some
        not changed installed packages has a dependency on some changed